--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-player": "^3.3.3",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
